--- a/MyApplication3/app/src/main/res/layout/fragment_main2.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_main2.xml
@@ -33,9 +33,10 @@
         android:layout_height="wrap_content"
         android:text="Word Play"
         android:textSize="36sp"
+        android:layout_marginTop="22dp"
         android:layout_below="@+id/imageButton3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp" />
+        android:layout_alignEnd="@+id/imageButton3"
+        android:layout_marginEnd="73dp" />
 
     <TextView
         android:id="@+id/textView4"
