--- a/MyApplication3/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_main.xml
@@ -7,50 +7,96 @@
     android:background="#ff0099cc"
     tools:context="com.example.jennyhuang.myapplication.MainActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="1dp"
+        android:background="@drawable/cov"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/cov"
+        tools:layout_editor_absoluteY="0dp"
+        android:layout_marginEnd="1dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="343dp"
+        android:layout_height="361dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:srcCompat="@drawable/cloud" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="333dp"
         android:layout_height="92dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@android:color/holo_blue_dark"
+        android:background="@android:color/transparent"
         android:backgroundTint="@android:color/holo_blue_dark"
         android:contentDescription="@android:string/fingerprint_icon_content_description"
         android:text="Press anywhere to start!"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
         android:textColor="@android:color/holo_orange_dark"
-        android:textSize="36sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintVertical_bias="0.612" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="154dp"
-        android:layout_height="77dp"
+        android:layout_width="183dp"
+        android:layout_height="106dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:autoSizeMinTextSize="@android:dimen/thumbnail_height"
         android:text="WORD PLAY"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textColorHighlight="@color/colorPrimary"
-        android:textSize="36sp"
+        android:textSize="@android:dimen/app_icon_size"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.082"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintVertical_bias="0.088" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="App Dev 2018"
+        tools:layout_editor_absoluteX="75dp"
+        tools:layout_editor_absoluteY="197dp" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="S2J group"
+        tools:layout_editor_absoluteX="195dp"
+        tools:layout_editor_absoluteY="187dp" />
 
 </android.support.constraint.ConstraintLayout>
