--- a/MyApplication3/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,13 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="1dp"
         android:background="@drawable/cov"
-        app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/cov"
-        tools:layout_editor_absoluteY="0dp"
-        android:layout_marginEnd="1dp" />
+        android:layout_marginEnd="1dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="-16dp" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -37,8 +38,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="333dp"
-        android:layout_height="92dp"
+        android:layout_width="173dp"
+        android:layout_height="120dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -53,12 +54,13 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.612" />
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.489" />
 
     <TextView
         android:id="@+id/textView2"
@@ -71,17 +73,22 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:autoSizeMinTextSize="@android:dimen/thumbnail_height"
+        android:background="@color/colorAccent"
+        android:backgroundTint="@color/colorAccent"
         android:text="WORD PLAY"
         android:textAlignment="center"
-        android:textColor="@color/colorAccent"
+        android:textAllCaps="false"
+        android:textColor="@android:color/holo_green_dark"
         android:textColorHighlight="@color/colorPrimary"
         android:textSize="@android:dimen/app_icon_size"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.088" />
+        app:layout_constraintVertical_bias="0.082"
+        tools:textColor="@android:color/holo_blue_bright" />
 
     <TextView
         android:id="@+id/textView8"
@@ -89,16 +96,11 @@
         android:layout_height="wrap_content"
         android:text="App Dev 2018"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="75dp"
-        tools:layout_editor_absoluteY="197dp" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="S2J group"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="195dp"
-        tools:layout_editor_absoluteY="187dp" />
+        tools:layout_editor_absoluteX="183dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
