--- a/MyApplication3/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
         android:layout_marginTop="8dp"
         android:autoSizeMinTextSize="@android:dimen/thumbnail_height"
         android:background="@color/colorAccent"
-        android:backgroundTint="@color/colorAccent"
+        android:backgroundTint="@android:color/holo_blue_bright"
         android:text="WORD PLAY"
         android:textAlignment="center"
         android:textAllCaps="false"
@@ -88,7 +88,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.082"
-        tools:textColor="@android:color/holo_blue_bright" />
+        tools:textColor="@color/colorAccent" />
 
     <TextView
         android:id="@+id/textView8"
