--- a/MyApplication3/app/src/main/res/layout/activity_main2.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_main2.xml
@@ -31,6 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/section_label"
+        android:background="@android:color/holo_blue_bright"
+        android:backgroundTint="@android:color/holo_blue_bright"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Click Any Game to Play!"
@@ -54,8 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/abcmatching"
-        android:layout_marginTop="61dp"
-        android:layout_below="@+id/imageButton"
+        android:layout_alignTop="@+id/imageButton7"
         android:layout_alignParentStart="true" />
 
     <ImageButton
@@ -63,8 +64,9 @@
         android:layout_width="wrap_content"
         android:layout_height="150dp"
         app:srcCompat="@drawable/numbermath"
-        android:layout_alignTop="@+id/imageButton6"
-        android:layout_alignStart="@+id/imageButton2" />
+        android:layout_above="@+id/textView5"
+        android:layout_alignStart="@+id/imageButton2"
+        android:layout_marginBottom="23dp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -83,15 +85,15 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_below="@+id/imageButton7"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="18dp"
         android:text="Math+"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="10dp" />
 
     <TextView
         android:id="@+id/textView7"
