--- a/MyApplication3/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_main.xml
@@ -97,15 +97,15 @@
         android:text="App Dev 2018"
         android:textStyle="bold"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.099"
+        app:layout_constraintVertical_bias="0.391"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.625"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView5"
